welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:50: error: Unmatched closing brace '}' ignored here
}
^